--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -27,9 +27,61 @@
             "execution_count": 1,
             "id": "34720ab6",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Promedio: 0.002616241497708267\n",
+                        "Media: 0.1561661396927819\n",
+                        "Moda: -0.843308865356537\n",
+                        "Rango: 5.976901869190577\n",
+                        "Desviacion estandar: 1.027046659112371\n"
+                    ]
+                }
+            ],
             "source": [
-                "# TODO"
+                "# TODO\n",
+                "import numpy as np\n",
+                "import matplotlib.pyplot as plt\n",
+                "import statistics as stat\n",
+                "\n",
+                "normal = np.random.normal(size=100)\n",
+                "\n",
+                "#print(normal)\n",
+                "print('Promedio:',normal.mean())\n",
+                "print(\"Media:\",np.median(normal))\n",
+                "print(\"Moda:\",stat.mode(normal))\n",
+                "print(\"Rango:\", np.max(normal)-np.min(normal))\n",
+                "print(\"Desviacion estandar:\",np.std(normal))"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "id": "1cb1fb70",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Promedio: 3.319356356675767\n",
+                        "Media: 2.469329878021572\n",
+                        "Moda: 0.8070526196171918\n",
+                        "Rango: 14.424829278203738\n",
+                        "Desviacion estandar: 2.885110376401231\n"
+                    ]
+                }
+            ],
+            "source": [
+                "chi_square= np.random.chisquare(3,size=100)\n",
+                "#print(chi_square)\n",
+                "print('Promedio:',chi_square.mean())\n",
+                "print(\"Media:\",np.median(chi_square))\n",
+                "print(\"Moda:\",stat.mode(chi_square))\n",
+                "print(\"Rango:\", np.max(chi_square)-np.min(chi_square))\n",
+                "print(\"Desviacion estandar:\",np.std(chi_square))\n"
             ]
         },
         {
@@ -48,12 +100,25 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "id": "d590308e",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "2.0"
+                        ]
+                    },
+                    "execution_count": 3,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
-                "# TODO"
+                "# TODO\n",
+                "data = [4, 2, 5, 8, 6]\n",
+                "np.std(data)"
             ]
         }
     ],
