--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -100,25 +100,47 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 8,
             "id": "d590308e",
             "metadata": {},
             "outputs": [
                 {
-                    "data": {
-                        "text/plain": [
-                            "2.0"
-                        ]
-                    },
-                    "execution_count": 3,
-                    "metadata": {},
-                    "output_type": "execute_result"
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Calculo con Numpy: 2.0\n",
+                        "Calculo de la desviacion de la poblacion es:2.0\n",
+                        "Calculo de la desviacion de la muestra es:1.7320508075688772\n"
+                    ]
                 }
             ],
             "source": [
                 "# TODO\n",
+                "\n",
+                "import math\n",
+                "import numpy as np\n",
+                "\n",
                 "data = [4, 2, 5, 8, 6]\n",
-                "np.std(data)"
+                "print ('Calculo con Numpy:',np.std(data))\n",
+                "\n",
+                "largo =0\n",
+                "#calculo la media\n",
+                "\n",
+                "for i in range(len(data)):\n",
+                "   largo +=data[i]\n",
+                "   media = largo /len(data)\n",
+                "\n",
+                "#calculo desviacion de la poblacion\n",
+                "sumatoria = 0\n",
+                "for i in range(len(data)):\n",
+                "   sumatoria+=(data[i]- media)**2\n",
+                "   resultado = math.sqrt((sumatoria)/len(data))\n",
+                "\n",
+                "#calculo desviacion de la muestra\n",
+                "desv_muest = math.sqrt((sumatoria)/len(data) - 1)\n",
+                "\n",
+                "print(f'Calculo de la desviacion de la poblacion es:{resultado}')\n",
+                "print(f'Calculo de la desviacion de la muestra es:{desv_muest}')"
             ]
         }
     ],
@@ -141,7 +163,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.4"
+            "version": "3.10.12"
         }
     },
     "nbformat": 4,
